Fixed overflow on narrow viewports

--- a/_sass/_components.container.scss
+++ b/_sass/_components.container.scss
@@ -3,6 +3,7 @@
     margin-right: auto;
     max-width: $unit-width + 3rem;
     padding: 0 1.5rem;
+    width: 100%;
     blockquote,
     h1, h2,
     ol, ul,
