--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -42,16 +42,16 @@ figcaption {
     font-style: italic;
     margin: 0 auto;
     max-width: $unit-measure;
-    text-align: center;
 }
 
 figure {
     margin: 3rem 0;
+    text-align: center;
     iframe {
         margin: 0;
     }
     img {
-        width: 100%;
+        max-width: 100%;
     }
 }
 
